--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="tip">
           <div class="tips tip-5">5%</div>
           <div class="tips tip-10">10%</div>
-          <div class="tips tip-15 active-tip">15%</div>
+          <div class="tips tip-15">15%</div>
           <div class="tips tip-25">25%</div>
           <div class="tips tip-50">50%</div>
           <div id="tip-custom">
